# zkvm_brainfuck

./: README.md
bf_vm/: Cargo.toml
bf_vm/src/: code.rs  interpreter.rs  lib.rs  matrix.rs
bf_vm/src/tests/: mod.rs  test_compile.rs  test_run.rs
bf_vm/tests/: test_compile.rs  test_run.rs
bf_zk/: Cargo.toml
bf_zk/src/: input_table.rs  instruction_table.rs  is_zero.rs  lib.rs  main_config.rs  memory_table.rs  output_table.rs  processor_table.rs  program_table.rs  range_table.rs  utilts.rs
bf_zk/tests/: test_simple.rs
res/: hello_world.bf  neptune_tutorial.bf
